--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "colin-bares-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://soundproofboot.github.io/colin-bares-portfolio",
+  "homepage": "http://portfolio.colinedwin.com",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
